[tool.poetry]
name = "huntflow-api-client-python"
version = "0.1.0"
description = "Public client for Huntflow API written in Python 3.7."
authors = ["Huntflow developers <developer@huntflow.ru>"]
readme = "README.md"
packages = [{include = "huntflow_api_client"}]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "0.23.3"
email-validator = "1.3.1"
pydantic = "1.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
pytest-httpx = "0.21.3"
pytest-asyncio = "0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
