[tool.poetry]
name = "huntflow-api-client"
version = "0.0.1"
description = "Public client for Huntflow API"
authors = ["Huntflow developers <developer@huntflow.ru>"]
readme = "README.md"
homepage = "https://github.com/huntflow/huntflow-api-client-python"
packages = [{include = "huntflow_api_client"}]

[tool.poetry.dependencies]
python = "^3.8.0"
httpx = "^0.23.3"
email-validator = "^1.3.1"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"
pytest = "7.2.1"
pytest-httpx = "0.21.3"
pytest-asyncio = "0.20.3"
flake8-bugbear = "^23.3.23"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.11.1"
flake8-quotes = "^3.3.2"
flake8-variables-names = "^0.0.5"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.2.1"
pytest-freezegun = "^0.4.2"
respx = "^0.20.1"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
multi_line_output = 3
profile = "black"
default_section = "THIRDPARTY"

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["examples"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
