
[project]
name = "huntflow-api-client"
version = "0.0.14"
description = "Huntflow API Client for Python"
authors = [
    {name = "Developers huntflow", email = "developer@huntflow.ru"},
]
dependencies = [
    "httpx>=0.23.3",
    "email-validator>=1.3.1",
    "pydantic>=1.10.4",
]
requires-python = ">3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
    "pytest-httpx>=0.22.0",
    "respx>=0.20.1",
    "pytest-asyncio>=0.21.0",
    "pytest-freezegun>=0.4.2",
]
lint = [
    "isort>=5.12.0",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "flake8-builtins>=2.1.0",
    "flake8-bugbear>=23.3.12",
    "flake8-comprehensions>=3.12.0",
    "flake8-quotes>=3.3.2",
    "flake8-variables-names>=0.0.5",
    "flake8-commas>=2.1.0",
    "flake8>=6.0.0",
    "setuptools>=67.7.2",
]

[tool.black]
line-length = 100
target-version = ["py38"]


[tool.isort]
line_length = 100
multi_line_output = 3
profile = "black"
default_section = "THIRDPARTY"


[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["examples", "__pypackages__"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
